# CS-UBB

./: README.md
sem 1/asc/lab 4/: lab 4 ex 28.asm  lab 4 ex 28.lst  lab 4 ex 5.asm  lab 4 ex 5.lst  lab 4.asm  lab 4.lst
sem 1/asc/lab 5/: lab 5 ex 29.asm  lab 5 ex 29.lst  lab 5 ex 4.asm  lab 5 ex 4.lst  lab 5 sir caract 2.asm  lab 5 sir caract.asm  lab 5 tema ex 1.asm  lab 5 tema ex 1.lst
sem 1/asc/lab 6/: lab 6 ex 10.asm  lab 6 ex 10.lst  lab 6 ex 20.asm  lab 6 ex 20.lst  lab 6.asm
sem 1/asc/lab 8/: lab 8 ex 13 fis.asm  lab 8 ex 13 fis.lst  lab 8 ex 13 fisiere.asm  lab 8 ex 13 fisiere.lst  lab8 ex 13 ala bun.asm  lab8 ex 13 ala bun.lst
sem 1/asc/lab_11/: lab 11 ex 1.asm  lab 11 ex 1.lst
sem 1/fp/: lab 2 ex 15.py  lab 3 tema.py  lab 3.py
sem 1/fp/lab 13 fp/: bkt.py
sem 1/fp/lab 4-6 bun/: domain.py  functionality.py  lab 4.docx  main.py  new.py  ui.py
sem 1/fp/lab 7-9/: main.py
sem 2/grafuri/test_2_grafuri/: CMakeLists.txt  in.txt  main.cpp  out.txt
sem 2/oop/Examen/: CMakeLists.txt  GUI.h  Model.h  Repo.cpp  Repo.h  Srv.h  (+6 more)
sem 2/oop/lab2_4_dinamic/: CMakeLists.txt  customSort.c  customSort.h  functions.c  functions.h  list.c  list.h  main.c  med.c  med.h  tests.c  tests.h
sem 2/oop/lab6_7/: Activity.cpp  Activity.h  CMakeLists.txt  Cart.cpp  Cart.h  CodeReview.docx  DinamicVector.h  Repo.cpp  Repo.h  Service.cpp  Service.h  Undo.cpp  Undo.h  Validator.h  file.txt  main.cpp  test_file.txt  tests.cpp  tests.h  ui.cpp  ui.h
sem 2/sd/: lab 6.mw  lab2.mw  lab3.mw  lab4.mw
sem 2/sda/Colectie (cu rel)/: App.cpp  CMakeLists.txt  Colectie.cpp  Colectie.h  IteratorColectie.cpp  IteratorColectie.h
sem 2/sda/Colectie (cu rel)/Teste (cu relatie)/: TestExtins.cpp  TestScurt.cpp
sem 2/sda/Proiect C++/: AB.cpp  AB.h  CMakeLists.txt  IteratorAB.cpp  IteratorAB.h  TestScurt.cpp
(+382 files in other folders)
