cmake_minimum_required(VERSION 3.27)
project(Proiect_C__)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(Proiect_C__
        AB.cpp
        AB.h
        App.cpp
        IteratorAB.cpp
        IteratorAB.h
        TestExtins.cpp
        TestExtins.h
        TestScurt.cpp
        TestScurt.h)
